--- a/styles.css
+++ b/styles.css
@@ -1,36 +1,35 @@
 @font-face {
-    font-family: kanit;
-    src: url(./Kanit/Kanit-Regular.ttf);
+    font-family: "Kanit";
+    src: url("./Kanit/Kanit-Regular.ttf")
 }
 
-body{
-    font-family: 'kanit';
+body {
+    font-family: "Kanit";
 }
 .container {
     width: 100%;
     max-width: 640px;
     margin-left: auto;
-    margin-right: auto
-    background-color azure;
+    margin-right: auto;
+    background: linear-gradient(to right, violet, cyan);
     padding: 20px;
     box-sizing: border-box;
 }
 .header {
     font-size: 30px;
     text-align: center;
-    margin-bottom: 20px;     
+    margin-bottom: 20px;
 }
 .header-form {
-    width: 140px;
+    width: 110px;
 }
 .flex {
     display: flex;
 }
 .form-input {
     margin-bottom: 10px;
-
 }
-input.form, textarea {
+input.form, textarea{
     border: 1px solid #ccc;
     width: 100%;
 }
@@ -38,20 +37,33 @@ input.form, textarea {
     text-align: center;
 }
 .button {
-    background-color: red;
-    width: 100%;
+    border: 1px;
+    width: 50%;
     height: 40px;
-    
 }
-@media  screen and (max-waidth: 768px) {
-    .flex {
-        flex-direction: column;
-    } 
-    .header {
-        font-size: 24px;
-    }
-    .button{
-        width: 100%;
-    }
-    
+.message {
+    margin-buttom: 20px;
+    padding: 10px;
+    background-color:lightgreen;
+    display: none;
+}
+.message.success {
+    background-color: lightgreen;
+    display: block;
+}
+.message.danger {
+    background-color: red;
+    display: block;
+}
+
+@media (max-width: 768px) {
+.flex {
+    flex-direction: column;
+}
+.header {
+    font-size: 24px;
+}
+.button {
+    width: 100%;
+}
 }
